# eval-financial-rag-evaluation-framework

./: .env.example  .gitignore  Makefile  README.md  eval-gates.yaml  pyproject.toml
.github/workflows/: eval-ci-gate.yml  eval-gate.yml
baseline/: scorecard.json
datasets/: README.md  golden_set.jsonl  issuers.yaml  judge_calibration_set.jsonl
datasets/fixtures/: api_test_filing.txt  judge_calibration_verdicts.json  judge_fail.json  judge_pass.json  llm.json  run_fail.jsonl  run_pass.jsonl
docs/implementation/: agent-assignments.md  architecture.md  design-system.md  design.md  implementation-plan.md  requirements.md  research.md  validation-plan.md  validation-report.md
docs/prompts/: developer.md  reviewer.md  team-lead.md  tester.md
src/: __init__.py  config.py
src/eval/: __init__.py  aggregate.py  calibrate.py  gates.py  golden.py  obs.py  report.py  run_eval.py  runner.py  scorecard.py
src/eval/metrics/: __init__.py  judge.py  programmatic.py  robustness.py
src/sut/: __init__.py  api.py  generate.py  ingest.py  prompts.py  providers.py  retrieve.py  store.py
tests/: test_aggregate.py  test_api.py  test_calibrate.py  test_config.py  test_gates.py  test_generate.py  test_golden.py  test_golden_dataset.py  test_ingest.py  test_judge.py  test_obs.py  test_pipeline_integration.py  test_programmatic.py  test_providers.py  test_report.py  test_retrieve.py  test_robustness.py  test_run_eval.py  test_runner.py  test_scorecard.py  test_smoke.py  test_store.py
