[project]
name = "eval-financial-rag"
version = "0.1.0"
description = "Financial RAG evaluation framework with hard-gated scorecard"
requires-python = ">=3.12"
dependencies = [
    "llama-index",
    "chromadb",
    "fastapi",
    "uvicorn",
    "ragas",
    "deepeval",
    "pydantic",
    "pyyaml",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
